[package]
name = "sdp-mazepocket"
version = "1.0.0"
edition = "2021"
description = "SDP Maze Pocket - Private Wallet Funding via Maze Routing"
authors = ["KausaLayer"]

[lib]
name = "sdp_mazepocket"
path = "src/lib.rs"

[[bin]]
name = "pocket-relay"
path = "src/bin/relay.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "limit"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Solana
solana-sdk = "1.18"
solana-client = "1.18"
solana-transaction-status = "1.18"
solana-account-decoder = "1.18"
spl-token = "4"
spl-associated-token-account = "2"
spl-memo = "4"

# Crypto - Enhanced Security for Maze Pocket
ed25519-dalek = "1.0"
sha2 = "0.10"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
bs58 = "0.5"
base64 = "0.21"
hex = "0.4"
zeroize = "1.3"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP client (for Jupiter)
reqwest = { version = "0.11", features = ["json"] }

# Utilities
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
bincode = "1.3"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
